# -2D-Lidar-Odometry-Mapping-and-Scan-Registration

./: README.md
FinalProject/: CMakeLists.txt  README.md  ScreenCamera_2024-07-01-15-37-39.json  ScreenCamera_2024-07-01-15-47-21.json  dataloader.cpp  dataloader.hpp  icp.cpp  icp.hpp  main.cpp  test.ipynb
FinalProject/dataloader/: dataloader.cpp
FinalProject/viewer/: CMakeLists.txt
